Issue #9; Added some spacing and finalizing Login screen.

--- a/trunk/WebServer/css/login.css
+++ b/trunk/WebServer/css/login.css
@@ -26,8 +26,8 @@ body {
 	text-align: right;
 }
 
-#loginCell {
-	text-align: center;
+#coreLoginTable {
+	padding-left: 15px;
 }
 
 td.loginLabel {
